--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "author": "Hanami Do",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.1.1",
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "express-validator": "^6.14.2",
     "forever": "^4.0.3",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
   },
