--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "forever": "^4.0.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "node-mysql": "^0.4.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
